--- a/index.html
+++ b/index.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css"/>
+    <link href="https://assets.nflxext.com/us/ffe/siteui/common/icons/nficon2016.ico" rel="shortcut icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Netflix</title>
 </head>
 <body>
+    <div class="banner">
+        
+        <div class="baner__main">
+            <span><a href="index.html"></a> NETFLIX</span>
+        </div>
+
+        <div class="banner__home">
+            <span>홈</span>
+        </div>
+
+        <div class="banner__tv-program">
+            <span>TV프로그램</span>
+        </div>
+
+        <div class="banner__movie">
+            <span>영화</span>
+        </div>
+
+        <div class="banner__new-content">
+            <span>NEW! 요즘 대세 콘텐츠</span>
+        </div>
+
+        <div class="banner__my-content">
+            <span>내가 찜한 콘텐츠</span>
+        </div>
+    </div>
     
+    <header>
+    </header>
 </body>
 </html>
